docker/bff-dashboard-service/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 4242
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: admin_api
                      domains: ["*"]
                      typed_per_filter_config:
                        envoy.filters.http.cors:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                          allow_origin_string_match:
                            - suffix: ".minibill.tech"
                            - suffix: "wildcat-dashboard.pages.dev"
                            - prefix: "http://localhost:"
                            - prefix: "http://127.0.0.1:"
                          allow_methods: "GET,POST,PUT,PATCH,DELETE,OPTIONS"
                          allow_headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Access-Control-Allow-Origin"
                          allow_credentials: true
                          max_age: "1728000"
                      routes:
                        - match: { prefix: "/v1/admin" }
                          route: { cluster: admin_aggregator }
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        keycloak_provider_service:
                          issuer: http://keycloak:8080/realms/dev
                          remote_jwks:
                            http_uri:
                              uri: http://keycloak:8080/realms/dev/protocol/openid-connect/certs
                              cluster: keycloak_service
                              timeout: 5s
                            cache_duration:
                              seconds: 600
                          forward_payload_header: x-jwt-payload
                        keycloak_provider_localhost:
                          issuer: http://localhost:8080/realms/dev
                          remote_jwks:
                            http_uri:
                              uri: http://keycloak:8080/realms/dev/protocol/openid-connect/certs
                              cluster: keycloak_service
                              timeout: 5s
                            cache_duration:
                              seconds: 600
                          forward_payload_header: x-jwt-payload
                        keycloak_provider_external_docker_dev_secure:
                          issuer: https://keycloak.wildcat-dev-docker.minibill.tech/realms/dev
                          remote_jwks:
                            http_uri:
                              uri: http://keycloak:8080/realms/dev/protocol/openid-connect/certs
                              cluster: keycloak_service
                              timeout: 5s
                            cache_duration:
                              seconds: 600
                          forward_payload_header: x-jwt-payload
                        keycloak_provider_external_docker_staging_secure:
                          issuer: https://keycloak.wildcat-staging-docker.minibill.tech/realms/dev
                          remote_jwks:
                            http_uri:
                              uri: http://keycloak:8080/realms/dev/protocol/openid-connect/certs
                              cluster: keycloak_service
                              timeout: 5s
                            cache_duration:
                              seconds: 600
                          forward_payload_header: x-jwt-payload
                        keycloak_provider_external_docker_secure:
                          issuer: https://keycloak.wildcat-docker.minibill.tech/realms/dev
                          remote_jwks:
                            http_uri:
                              uri: http://keycloak:8080/realms/dev/protocol/openid-connect/certs
                              cluster: keycloak_service
                              timeout: 5s
                            cache_duration:
                              seconds: 600
                          forward_payload_header: x-jwt-payload
                        keycloak_provider_external_cluster_dev_secure:
                          issuer: https://keycloak.wildcat-dev.minibill.tech/realms/dev
                          remote_jwks:
                            http_uri:
                              uri: http://keycloak:8080/realms/dev/protocol/openid-connect/certs
                              cluster: keycloak_service
                              timeout: 5s
                            cache_duration:
                              seconds: 600
                          forward_payload_header: x-jwt-payload
                        keycloak_provider_external_cluster_staging_secure:
                          issuer: https://keycloak.wildcat-staging.minibill.tech/realms/dev
                          remote_jwks:
                            http_uri:
                              uri: http://keycloak:8080/realms/dev/protocol/openid-connect/certs
                              cluster: keycloak_service
                              timeout: 5s
                            cache_duration:
                              seconds: 600
                          forward_payload_header: x-jwt-payload
                        keycloak_provider_external_cluster_secure:
                          issuer: https://keycloak.wildcat.minibill.tech/realms/dev
                          remote_jwks:
                            http_uri:
                              uri: http://keycloak:8080/realms/dev/protocol/openid-connect/certs
                              cluster: keycloak_service
                              timeout: 5s
                            cache_duration:
                              seconds: 600
                          forward_payload_header: x-jwt-payload
                      rules:
                        - match: { prefix: "/v1/admin" }
                          requires:
                            requires_any:
                              requirements:
                                - provider_name: keycloak_provider_service
                                - provider_name: keycloak_provider_localhost
                                - provider_name: keycloak_provider_external_docker_dev_secure
                                - provider_name: keycloak_provider_external_docker_staging_secure
                                - provider_name: keycloak_provider_external_docker_secure
                                - provider_name: keycloak_provider_external_cluster_dev_secure
                                - provider_name: keycloak_provider_external_cluster_staging_secure
                                - provider_name: keycloak_provider_external_cluster_secure
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: admin_aggregator
      connect_timeout: 5s
      type: STRICT_DNS
      load_assignment:
        cluster_name: admin_aggregator
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: admin-aggregator
                      port_value: 3338

    - name: keycloak_service
      connect_timeout: 5s
      type: STRICT_DNS
      load_assignment:
        cluster_name: keycloak_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: keycloak
                      port_value: 8080

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
